--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pymsyt = "^0.3.2"
+pathlib = "^1.0.1"
+pywebview = "^3.4"
 
 [tool.poetry.dev-dependencies]
 
